# amqp

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  amqp.cabal  changelog.md
.github/workflows/: ci.yml
Network/: AMQP.hs
Network/AMQP/: ChannelAllocator.hs  Generated.hs  Helpers.hs  Internal.hs  Lifted.hs  Protocol.hs  Types.hs
Tools/: Builder.hs
examples/: ExampleConfirms.hs  ExampleConsumer.hs  ExampleProducer.hs  ExampleTLSConsumer.hs  ExampleTLSProducer.hs
examples/confirms/: ExampleConfirms.hs  confirms.cabal
examples/connectionManagement/: ConnectionManager.hs  ExampleConnectionManagement.hs  connectionManagement.cabal
examples/consumer/: ExampleConsumer.hs  consumer.cabal
examples/producer/: ExampleProducer.hs  producer.cabal
examples/tlsConsumer/: ExampleTLSConsumer.hs  tlsConsumer.cabal
examples/tlsProducer/: ExampleTLSProducer.hs  tlsProducer.cabal
test/: BasicPublishSpec.hs  BasicRejectSpec.hs  ChannelSpec.hs  ConnectionSpec.hs  ExchangeDeclareSpec.hs  ExchangeDeleteSpec.hs  FromURISpec.hs  IdAllocatorSpec.hs  QueueDeclareSpec.hs  QueueDeleteSpec.hs  QueuePurgeSpec.hs  Runner.hs
