Name:                amqp
Version:             0.6.0
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
                     .
                     Changelog: <https://github.com/hreinhardt/amqp/blob/master/README.md>
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt
Category:            Network
Maintainer:          Holger Reinhardt <hreinhardt@gmail.com>
Build-Type:          Simple
Homepage:            https://github.com/hreinhardt/amqp
bug-reports:         https://github.com/hreinhardt/amqp/issues
Cabal-Version:       >=1.6
Extra-source-files:  examples/ExampleConsumer.hs,
                     examples/ExampleProducer.hs

Library
  Build-Depends:      base >= 4 && < 5, binary >= 0.7, containers>=0.2, bytestring>=0.9, network>=2.2.3.1, data-binary-ieee754>=0.4.2.1, text>=0.11.2, split>=0.2, clock == 0.3
  Exposed-modules:    Network.AMQP, Network.AMQP.Types
  Other-modules:      Network.AMQP.Generated, Network.AMQP.Helpers, Network.AMQP.Protocol, Network.AMQP.Internal
  GHC-Options:        -Wall

Executable amqp-builder
  Build-Depends:      base >= 4 && < 5, xml == 1.3.*, containers >= 0.2
  Hs-Source-Dirs:     Tools
  Main-is:            Builder.hs
  GHC-Options:        -Wall

source-repository head
  type:     git
  location: https://github.com/hreinhardt/amqp

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      ., test
  main-is:
      Runner.hs
  build-depends:
      base >= 4 && < 5, binary >= 0.7, containers>=0.2, bytestring>=0.9, network>=2.2.3.1, data-binary-ieee754>=0.4.2.1, text>=0.11.2, split>=0.2
    , hspec              >= 1.3
    , hspec-expectations >= 0.3.3
