Name:                amqp
Version:             0.12
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
                     .
                     Changelog: <https://github.com/hreinhardt/amqp/blob/master/README.md>
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt
Category:            Network
Maintainer:          Holger Reinhardt <hreinhardt@gmail.com>
Build-Type:          Simple
Homepage:            https://github.com/hreinhardt/amqp
bug-reports:         https://github.com/hreinhardt/amqp/issues
Cabal-Version:       >=1.8
Extra-source-files:  examples/ExampleConsumer.hs,
                     examples/ExampleProducer.hs

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

Library
  Build-Depends:
    base >= 4 && < 5,
    binary >= 0.5,
    containers>=0.2,
    bytestring>=0.9,
    data-binary-ieee754>=0.4.2.1,
    text>=0.11.2,
    split>=0.2,
    clock >= 0.4.0.1,
    monad-control >= 0.3,
    connection == 0.2.*,
    vector
  if flag(network-uri)
     build-depends: network-uri >= 2.6, network > 2.6
  else
     build-depends: network < 2.6

  Exposed-modules:    Network.AMQP, Network.AMQP.Types, Network.AMQP.Lifted
  Other-modules:      Network.AMQP.ChannelAllocator, Network.AMQP.Generated, Network.AMQP.Helpers, Network.AMQP.Protocol, Network.AMQP.Internal
  GHC-Options:        -Wall

Executable amqp-builder
  Build-Depends:      base >= 4 && < 5, xml == 1.3.*, containers >= 0.2
  Hs-Source-Dirs:     Tools
  Main-is:            Builder.hs
  GHC-Options:        -Wall

source-repository head
  type:     git
  location: https://github.com/hreinhardt/amqp

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      ., test
  main-is:
      Runner.hs
  other-modules:
      BasicPublishSpec
      BasicRejectSpec
      ChannelSpec
      ConnectionSpec
      ExchangeDeclareSpec
      ExchangeDeleteSpec
      QueueDeclareSpec
      QueueDeleteSpec
      QueuePurgeSpec
  build-depends:
      base >= 4 && < 5
    , binary >= 0.5
    , containers>=0.2
    , bytestring>=0.9
    , data-binary-ieee754>=0.4.2.1
    , text>=0.11.2
    , split>=0.2
    , clock >= 0.4.0.1
    , hspec              >= 1.3
    , hspec-expectations >= 0.3.3
    , connection == 0.2.*
    , vector
  if flag(network-uri)
     build-depends: network-uri >= 2.6, network > 2.6
  else
     build-depends: network < 2.6