Name:                amqp
Version:             0.22.2
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt
Category:            Network
Maintainer:          Holger Reinhardt <hreinhardt@gmail.com>
Build-Type:          Simple
Homepage:            https://github.com/hreinhardt/amqp
bug-reports:         https://github.com/hreinhardt/amqp/issues
Cabal-Version:       >=1.10
Extra-source-files:  examples/ExampleConsumer.hs,
                     examples/ExampleProducer.hs,
                     changelog.md

Library
  default-language: Haskell2010
  Build-Depends:
    base >= 4 && < 5,
    binary >= 0.5,
    containers>=0.2,
    bytestring>=0.9,
    data-binary-ieee754>=0.4.2.1,
    text>=0.11.2,
    split>=0.2,
    clock >= 0.4.0.1,
    monad-control >= 0.3,
    connection >= 0.2 && <= 0.4,
    vector,
    stm >= 2.4.0,
    network-uri >= 2.6,
    network > 2.6
  Exposed-modules:    Network.AMQP, Network.AMQP.Types, Network.AMQP.Lifted
  Other-modules:      Network.AMQP.ChannelAllocator, Network.AMQP.Generated, Network.AMQP.Helpers, Network.AMQP.Protocol, Network.AMQP.Internal, Paths_amqp
  GHC-Options:        -Wall


Executable amqp-builder
  default-language: Haskell2010
  Build-Depends:      base >= 4 && < 5, xml == 1.3.*, containers >= 0.2
  Hs-Source-Dirs:     Tools
  Main-is:            Builder.hs
  GHC-Options:        -Wall


Executable amqp-example-confirms
  default-language:   Haskell2010
  Hs-Source-Dirs:     examples/confirms
  Main-is:            ExampleConfirms.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2


Executable amqp-example-consumer
  default-language:   Haskell2010
  Hs-Source-Dirs:     examples/consumer
  Main-is:            ExampleConsumer.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2


Executable amqp-example-producer
  default-language:   Haskell2010
  Hs-Source-Dirs:     examples/producer
  Main-is:            ExampleProducer.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2


Executable amqp-example-tls-consumer
  default-language:   Haskell2010
  Hs-Source-Dirs:     examples/tlsConsumer
  Main-is:            ExampleTLSConsumer.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2


Executable amqp-example-tls-producer
  default-language:   Haskell2010
  Hs-Source-Dirs:     examples/tlsProducer
  Main-is:            ExampleTLSProducer.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2



source-repository head
  type:     git
  location: https://github.com/hreinhardt/amqp

test-suite spec
  default-language: Haskell2010
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      ., test
  main-is:
      Runner.hs
  other-modules:
      BasicPublishSpec
      BasicRejectSpec
      ChannelSpec
      ConnectionSpec
      ExchangeDeclareSpec
      ExchangeDeleteSpec
      QueueDeclareSpec
      QueueDeleteSpec
      QueuePurgeSpec
  build-depends:
      base >= 4 && < 5
    , binary >= 0.5
    , containers>=0.2
    , bytestring>=0.9
    , data-binary-ieee754>=0.4.2.1
    , text>=0.11.2
    , split>=0.2
    , clock >= 0.4.0.1
    , hspec              >= 1.3
    , hspec-expectations >= 0.3.3
    , connection >= 0.2 && <= 0.4
    , vector
    , stm >= 2.4.0
    , network-uri >= 2.6
    , network > 2.6
