Name:                confirms
Version:             0.22.2
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt
Category:            Network
Maintainer:          Holger Reinhardt <hreinhardt@gmail.com>
Build-Type:          Simple
Homepage:            https://github.com/hreinhardt/amqp
bug-reports:         https://github.com/hreinhardt/amqp/issues
Cabal-Version:       >=1.10

Executable amqp-example-confirms
  default-language:   Haskell2010
  Hs-Source-Dirs:     .
  Main-is:            ExampleConfirms.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp >= 0.22.1
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2



source-repository head
  type:     git
  location: https://github.com/hreinhardt/amqp
