Name:                confirms
Version:             1
Cabal-Version:       >=1.10
Build-Type:          Simple

Executable amqp-example-confirms
  default-language:   Haskell2010
  Hs-Source-Dirs:     .
  Main-is:            ExampleConfirms.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp >= 0.22.1
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2
