Name:                connectionManagement
Version:             1
Cabal-Version:       >=1.10
Build-Type:          Simple

Executable amqp-example-connection-management
  default-language:   Haskell2010
  Hs-Source-Dirs:     .
  Main-is:            ExampleConnectionManagement.hs
  other-modules:      ConnectionManager
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp >= 0.22.1
                    , bytestring>=0.9
                    , containers >= 0.2
                    , resource-pool
                    , safe
                    , safe-exceptions
                    , stm >= 2.4.0
                    , text
                    , time
