Name:                producer
Version:             1
Build-Type:          Simple
Cabal-Version:       >=1.10


Executable amqp-example-producer
  default-language:   Haskell2010
  Hs-Source-Dirs:     .
  Main-is:            ExampleProducer.hs
  GHC-Options:        -Wall
  Build-Depends:      base >= 4 && < 5
                    , amqp >= 0.22.1
                    , bytestring>=0.9
                    , stm >= 2.4.0
                    , time
                    , containers >= 0.2
